--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@
      font-size: var(--normal-font-size);
  }
  body{
+     scroll-behavior: smooth;
      background-color: var(--body-color);
      color: var(--text-color);
  }
