--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,8 @@
      box-sizing: border-box;
  }
  html{
-     scroll-behavior: smooth;
+    overflow-y: scroll;
+    scroll-behavior: smooth !important;
  }
  body,
  button,
